--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Sashu's Home Page
-description: I'm making this so I can put my projects here form now on.
+description: I'm making this so I can put my projects here from now on.
